# wallet

./: .gitattributes  .gitignore  AGENTS.md  README.md  justfile
.clinerules/: memories.md
core/: justfile  (+5 more)
core/apps/agent/: Cargo.toml  README.md  Settings.yaml
core/apps/agent/src/: agent.rs  config.rs  coordination.rs  lib.rs  review_reply.rs
core/apps/agent/src/chatwoot/: dispatch.rs
core/apps/agent/src/completion/: backend.rs  mod.rs
core/apps/agent/src/completion/provider/: anthropic.rs  deepseek.rs  mod.rs  venice.rs
core/apps/agent/src/scheduler/: runner.rs
core/apps/agent/src/slack/: client.rs  dispatch.rs  mod.rs
core/apps/agent/src/tools/: chatwoot_conversation.rs  chatwoot_review_reply.rs  memory.rs  mod.rs  slack.rs  slack_history.rs  slack_post.rs
core/crates/gem_bitcoin/: Cargo.toml
core/crates/gem_bitcoin/src/: address.rs  hash.rs  lib.rs
core/crates/gem_bitcoin/src/models/: address.rs  block.rs  transaction.rs
core/crates/gem_bitcoin/src/provider/: preload.rs  state_mapper.rs  transaction_state.rs  transactions_mapper.rs
core/crates/gem_bitcoin/src/signer/: bitcoin_cash.rs  chain_signer.rs  encoding.rs  mod.rs  personalization.rs  signature.rs  transaction.rs  zcash.rs
core/crates/gem_bitcoin/src/signer/address/: bitcoin.rs  bitcoin_cash.rs  doge.rs  litecoin.rs  mod.rs  script.rs  zcash.rs
core/crates/gem_bitcoin/src/signer/planner/: fee.rs  inputs.rs  mod.rs  outputs.rs  request.rs  spend.rs  types.rs
core/crates/gem_bitcoin/src/testkit/: address_mock.rs  mod.rs  planner_mock.rs  signer_mock.rs  transaction_mock.rs
core/crates/gem_bitcoin/testdata/: node_info_no_blocks.json
core/crates/gem_cardano/: Cargo.toml
core/crates/gem_cardano/src/: address.rs  cbor.rs  lib.rs  planner.rs  transaction.rs
core/crates/gem_cardano/src/models/: block.rs
core/crates/gem_cardano/src/provider/: preload.rs  preload_mapper.rs  state.rs  transactions.rs
core/crates/gem_cardano/src/rpc/: client.rs
core/crates/gem_cardano/src/signer/: chain_signer.rs  extended_key.rs  mod.rs
core/crates/gem_cosmos/: Cargo.toml
core/crates/gem_cosmos/src/: address.rs  constants.rs
core/crates/gem_cosmos/src/models/: message.rs
core/crates/gem_cosmos/src/provider/: preload_mapper.rs  staking.rs  staking_mapper.rs  state_mapper.rs  testkit.rs  transactions_mapper.rs
core/crates/gem_cosmos/src/rpc/: client.rs
core/crates/gem_cosmos/src/signer/: chain_signer.rs  mod.rs  transaction.rs
core/crates/gem_cosmos/testdata/: reverted_transfer_spam.json
core/crates/gem_crypto/: Cargo.toml
core/crates/gem_crypto/src/: compare.rs  error.rs  hash.rs  lib.rs  pbkdf.rs  random.rs
core/crates/gem_derivation/: Cargo.toml
core/crates/gem_derivation/src/: cardano.rs  error.rs  lib.rs  wallet_id.rs
core/crates/gem_derivation/src/mnemonic/: bip32.rs  bitcoin.rs  cardano.rs  crypto.rs  derivation.rs  mod.rs  path.rs  scheme.rs  slip10.rs
core/crates/gem_derivation/src/mnemonic/tests/: derivation.rs  fixtures.rs  mod.rs
core/crates/gem_derivation/src/private_key/: address.rs  import.rs  mod.rs  path.rs  tests.rs
core/crates/gem_hash/: Cargo.toml
core/crates/gem_hash/src/: blake2.rs  lib.rs  sha2.rs
core/crates/gem_keystore/: Cargo.toml  README.md
core/crates/gem_keystore/src/: error.rs  id.rs  lib.rs  mnemonic.rs  testkit.rs
core/crates/gem_keystore/src/storage/: constants.rs  crypto.rs  file_io.rs  file_keystore.rs  format.rs  mod.rs  queue.rs  testkit.rs  types.rs
core/crates/gem_keystore/src/storage/tests/: mod.rs  testkit.rs  v3.rs  v4.rs
core/crates/gem_keystore/src/v3/: constants.rs  crypto.rs  mod.rs  reader.rs  tests.rs  types.rs
core/crates/gem_keystore/testdata/: v3_ios_mnemonic.json  v3_minimal_template.json
core/crates/gem_sui/: Cargo.toml
core/crates/gem_sui/src/: address.rs  error.rs  lib.rs
core/crates/gem_sui/src/provider/: preload.rs  transaction_broadcast_mapper.rs  transactions.rs
core/crates/gem_sui/src/rpc/: client.rs  mapper.rs  mod.rs  staking.rs  transport.rs
core/crates/gem_sui/src/rpc/proto/: balances.rs  bcs.rs  checkpoints.rs  field.rs  json.rs  mod.rs  move_package.rs  objects.rs  service.rs  status.rs  timestamp.rs  transactions.rs
core/crates/gem_sui/src/tx_builder/: balance.rs  input.rs  mod.rs  object_resolver.rs  prefetch.rs  transaction.rs
core/crates/gem_sui/src/tx_builder/transaction_json/: builder.rs  mod.rs  model.rs  replay.rs  resolver.rs
core/crates/gem_sui/testdata/: transaction_builder_json.json
core/crates/gem_xrp/: Cargo.toml
core/crates/gem_xrp/src/: address.rs  lib.rs
core/crates/gem_xrp/src/signer/: amount.rs  chain_signer.rs  mod.rs  transaction.rs
core/crates/swapper/: Cargo.toml
core/crates/swapper/src/: client_factory.rs  config.rs  cross_chain.rs  error.rs  fee_token.rs  lib.rs  models.rs  swapper.rs  testkit.rs
core/crates/swapper/src/across/: config_store.rs  hubpool.rs  provider.rs
core/crates/swapper/src/approval/: mod.rs
core/crates/swapper/src/cetus_clmm/: client.rs  constants.rs  mod.rs  provider.rs  tx_builder.rs
core/crates/swapper/src/chainflip/: provider.rs  tx_builder.rs
core/crates/swapper/src/chainflip/broker/: client.rs  model.rs
core/crates/swapper/src/fees/: mod.rs  referral.rs  reserve.rs
core/crates/swapper/src/jupiter/: provider.rs
core/crates/swapper/src/mayan/: asset.rs  cctp_domain.rs  constants.rs  mapper.rs  mod.rs  model.rs  provider.rs  testkit.rs  wormhole_chain.rs
core/crates/swapper/src/near_intents/: assets.rs  mod.rs  model.rs  provider.rs
core/crates/swapper/src/okx/: mod.rs  provider.rs  referral.rs
core/crates/swapper/src/panora/: client.rs  model.rs  provider.rs
core/crates/swapper/src/proxy/: mod.rs  provider.rs  provider_factory.rs
core/crates/swapper/src/relay/: model.rs  provider.rs
core/crates/swapper/src/squid/: provider.rs
core/crates/swapper/src/stonfi/: client.rs  model.rs  provider.rs  testkit.rs
core/crates/swapper/src/thorchain/: asset.rs  chain.rs  client.rs  memo.rs  mod.rs  model.rs  provider.rs  quote_data_mapper.rs  swap_mapper.rs
core/crates/swapper/src/uniswap/: fee_token.rs
(+1694 files in other folders)
