[package]
name = "gem_cardano"
version = { workspace = true }
edition = { workspace = true }
publish = false

[features]
default = []
rpc = [
    "dep:async-trait",
    "dep:bech32",
    "dep:chain_traits",
    "dep:chrono",
    "dep:futures",
    "dep:gem_client",
    "dep:hex",
    "dep:num-bigint",
    "dep:num-traits",
    "dep:serde_json",
]
signer = [
    "dep:bech32",
    "dep:curve25519-dalek",
    "dep:gem_hash",
    "dep:hex",
    "dep:num-traits",
    "dep:sha2",
    "dep:zeroize",
]
reqwest = ["dep:gem_client", "gem_client/reqwest"]
chain_integration_tests = ["rpc", "reqwest", "settings/testkit"]

[dependencies]
primitives = { path = "../primitives" }
num-bigint = { workspace = true, optional = true }
serde_serializers = { path = "../serde_serializers" }
bech32 = { workspace = true, optional = true }
gem_hash = { path = "../gem_hash", optional = true }
futures = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
chrono = { workspace = true, features = ["serde"], optional = true }
async-trait = { workspace = true, optional = true }
chain_traits = { path = "../chain_traits", optional = true }
gem_client = { path = "../gem_client", optional = true }
num-traits = { workspace = true, optional = true }
curve25519-dalek = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
gem_client = { path = "../gem_client", features = ["testkit"] }
primitives = { path = "../primitives", features = ["testkit"] }
tokio = { workspace = true, features = ["macros"] }
reqwest = { workspace = true }
settings = { path = "../settings", features = ["testkit"] }
