[package]
name = "gem_cosmos"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
bech32 = { workspace = true }
hex = { workspace = true }
gem_hash = { path = "../gem_hash" }
gem_encoding = { path = "../gem_encoding" }
primitives = { path = "../primitives" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_serializers = { path = "../serde_serializers" }

# Optional RPC dependencies
chrono = { workspace = true, features = ["serde"], optional = true }
async-trait = { workspace = true, optional = true }
gem_client = { path = "../gem_client", optional = true }
chain_traits = { path = "../chain_traits", optional = true }
futures = { workspace = true, optional = true }
number_formatter = { path = "../number_formatter", optional = true }

signer = { path = "../signer", optional = true }
k256 = { workspace = true, optional = true }

num-bigint = { workspace = true }

[features]
default = []
rpc = [
    "dep:chrono",
    "dep:async-trait",
    "dep:gem_client",
    "dep:chain_traits",
    "dep:futures",
    "dep:number_formatter",
]
signer = ["dep:signer", "dep:k256", "gem_encoding/protobuf"]
reqwest = ["gem_client/reqwest"]
unit_tests = ["signer"]
chain_integration_tests = ["rpc", "reqwest", "settings/testkit"]

[dev-dependencies]
primitives = { path = "../primitives", features = ["testkit"] }
tokio = { workspace = true, features = ["macros", "rt"] }
reqwest = { workspace = true }
settings = { path = "../settings", features = ["testkit"] }
