[package]
name = "gem_hash"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
blake2b_simd = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
ripemd = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
zeroize = { workspace = true }
